<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            tools:context=".ui.main_screen.app_settings.printer_settings.logwood_setting.LogWoodSettingFragment">

        <TextView
                android:id="@+id/text_view_server_ip_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logwood_server_ip_address"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
                android:id="@+id/linear_layout_server_ip_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_view_server_ip_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/edit_text_ip_address_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_white_border_black"
                    android:focusable="true"
                    android:gravity="center"
                    android:hint="@string/_000"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusRight="@+id/edit_text_ip_address_2"
                    android:padding="4dp"/>

            <EditText
                    android:id="@+id/edit_text_ip_address_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_white_border_black"
                    android:gravity="center"
                    android:hint="@string/_000"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusRight="@+id/edit_text_ip_address_3"
                    android:padding="4dp"/>

            <EditText
                    android:id="@+id/edit_text_ip_address_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_white_border_black"
                    android:gravity="center"
                    android:hint="@string/_000"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusRight="@+id/edit_text_ip_address_4"
                    android:padding="4dp"/>

            <EditText
                    android:id="@+id/edit_text_ip_address_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_white_border_black"
                    android:gravity="center"
                    android:hint="@string/_000"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="4dp"/>

        </LinearLayout>

        <TextView
                android:id="@+id/text_view_port_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_server_ip_address"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/enter_port_no"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"/>

        <EditText
                android:id="@+id/edit_text_port_no"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_border_black"
                android:gravity="center"
                android:hint="@string/_0000"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:layout_marginTop="12dp"
                android:maxLength="4"
                android:padding="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_port_label"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button_done_server_ip_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_proceed_button"
                    android:text="@string/set"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"/>

            <Button
                    android:id="@+id/button_skip_server_ip_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_proceed_button"
                    android:text="@string/skip"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>