<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            tools:context=".ui.main_screen.app_settings.printer_settings.network_printer.NetworkPrinterFragment">

        <TextView
                android:id="@+id/text_view_ip_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/enter_ip_of_a_network_printer"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"/>

        <LinearLayout
                android:id="@+id/linear_layout_server_ip_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_ip_label">

            <EditText
                    android:id="@+id/edit_text_ip_address_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_white_border_black"
                    android:focusable="true"
                    android:gravity="center"
                    android:hint="@string/_000"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusRight="@+id/edit_text_ip_address_2"
                    android:padding="4dp"/>

            <EditText
                    android:id="@+id/edit_text_ip_address_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_white_border_black"
                    android:gravity="center"
                    android:hint="@string/_000"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusRight="@+id/edit_text_ip_address_3"
                    android:padding="4dp"/>

            <EditText
                    android:id="@+id/edit_text_ip_address_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_white_border_black"
                    android:gravity="center"
                    android:hint="@string/_000"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusRight="@+id/edit_text_ip_address_4"
                    android:padding="4dp"/>

            <EditText
                    android:id="@+id/edit_text_ip_address_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_white_border_black"
                    android:gravity="center"
                    android:hint="@string/_000"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="4dp"/>

        </LinearLayout>

        <TextView
                android:id="@+id/text_view_port_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_server_ip_address"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/enter_port_no"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"/>

        <EditText
                android:id="@+id/edit_text_port_no"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_border_black"
                android:gravity="center"
                android:hint="@string/_0000"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:layout_marginTop="12dp"
                android:maxLength="4"
                android:padding="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_port_label"/>

        <TextView
                android:id="@+id/text_view_printer_selected"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="Bluetooth Printer is already selected, Setting Network Printer will void the bluetooth printer"
                android:textColor="@color/colorRed"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/button_set_network"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <Button
                android:id="@+id/button_set_network"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_proceed_button"
                android:text="@string/set"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_open_logwood"/>

        <Button
                android:id="@+id/button_open_logwood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_proceed_button"
                android:text="Logwood settings"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@+id/button_set_network"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>